@@ -4,13 +4,17 @@
 
 libdir = $(XINE_PLUGINDIR)
 
-lib_LTLIBRARIES = xineplug_decode_roqaudio.la xineplug_decode_adpcm.la
+lib_LTLIBRARIES = xineplug_decode_roqaudio.la xineplug_decode_adpcm.la \
+	xineplug_decode_logpcm.la
 
 xineplug_decode_roqaudio_la_SOURCES = roqaudio.c
 xineplug_decode_roqaudio_la_LDFLAGS = -avoid-version -module
 
 xineplug_decode_adpcm_la_SOURCES = adpcm.c
 xineplug_decode_adpcm_la_LDFLAGS = -avoid-version -module
+
+xineplug_decode_logpcm_la_SOURCES = logpcm.c
+xineplug_decode_logpcm_la_LDFLAGS = -avoid-version -module
 
 # noinst_HEADERS = 
 
